@@ -1,4 +1,5 @@
 Changes towards version 0.2:
+- Added an option ('-a') to display 'PC-style' course-scan -PhracturedBlue
 - Fixed deadlock races in new FlushGraphics method -PhracturedBlue
 - FlushGraphics now waits and notifies on a per-thread level
 - No longer using SHGetFolderPath on Windows - SvdB
